--- a/GroupLockApplication/app/src/main/res/layout/toolbar.xml
+++ b/GroupLockApplication/app/src/main/res/layout/toolbar.xml
@@ -45,20 +45,21 @@
 
 
             <ImageView
-                android:layout_width="64dp"
+                android:layout_width="36dp"
                 android:layout_height="match_parent"
                 android:id="@+id/imageInfo"
-                android:src="@drawable/ic_info_outline_white_24dp"
+                android:src="@drawable/ic_help_36dp"
                 android:baselineAlignBottom="false"
                 android:layout_gravity="right"
                 android:clickable="false"
                 android:adjustViewBounds="false"
                 android:contextClickable="false"
                 android:cropToPadding="false"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:visibility="visible"
-                android:onClick="showInfo" />
+                android:onClick="showInfo"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
             <ImageView
                 android:layout_width="64dp"
